--- a/test/fixtures/words.yml
+++ b/test/fixtures/words.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  definition: MyText
+  name: testey
+  definition: definição
 
 two:
-  name: MyString
-  definition: MyText
+  name: test
+  definition: cupel
