--- a/test/fixtures/words.yml
+++ b/test/fixtures/words.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: testey
-  definition: definição
+localdb:
+ name: palavra_local
+ definition: definição da palavra_local
 
-two:
-  name: test
-  definition: cupel
+dicapi:
+ name: unconstitutional
+ definition: ':not according or consistent with the constitution of a body politic (as a nation)'
